# src/main/resources/static/api-docs/swagger.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: "Todo Cine API"
   description: "API managed with Spring Boot, JWT security, and movie catalog with custom exception handling."
-  version: "v6.3.8"
+  version: "v3.6.9"
 
 servers:
   - url: "http://localhost:8080/api"
@@ -628,6 +628,63 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
 
+  /listas/{id}/valoraciones:
+    parameters:
+      - name: "id"
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+        description: "Unique identifier of the specific list of movies"
+
+    get:
+      summary: "Get a list of valorations for the specific list"
+      description: "Returns a list of valorations."
+      tags: [ "List's valorations" ]
+      security:
+        - BearerAuth: [ ]
+      responses:
+        '200':
+          description: "Valorations retrieved successfully"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ValoracionListaDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+
+    put:
+      summary: "Update or post a valoration"
+      description: "Updates or posts a valoration about the list"
+      tags: [ "List's valorations" ]
+      security:
+        - BearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ValoracionListaReqDTO'
+      responses:
+        '200':
+          description: "Valoration created or updated successfully"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValoracionListaDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
 
 components:
   securitySchemes:
@@ -818,12 +875,12 @@ components:
 
     ListaReqDTO:
       type: object
-      required: [ nombre, descripcion, usuarioId ]
+      required: [ nombre, descripcion, username ]
       properties:
         id: { type: integer, format: int64, description: "Unique list ID" }
         nombre: { type: string, description: "List name" }
         descripcion: { type: string, description: "List description" }
-        usuarioId: { type: integer, description: "List owner id" }
+        username: { type: string, description: "List owner" }
         publica: { type: boolean, description: "List visibility" }
 
     MovieListaDTO:
@@ -836,4 +893,25 @@ components:
         poster_path: { type: string, description: "Poster image path" }
         overview: { type: string, description: "Summary or synopsis" }
         release_date: { type: string, description: "Release date" }
+
+    ValoracionListaDTO:
+      type: object
+      required: [ listaId, puntuacion, username, fecha ]
+      properties:
+        listaId: { type: integer, format: int64, description: "Unique list ID" }
+        puntuacion: { type: double, description: "Rating" }
+        comentario: { type: string, description: "A comment about the list" }
+        username: { type: string, description: "Valoration owner" }
+        fecha: { type: string, description: "Valoration creation date" }
+
+
+    ValoracionListaReqDTO:
+      type: object
+      required: [ listaId, puntuacion, username ]
+      properties:
+        listaId: { type: integer, format: int64, description: "Unique list ID" }
+        puntuacion: { type: double, description: "Rating" }
+        comentario: { type: string, description: "A comment about the list" }
+        username: { type: string, description: "Valoration owner" }
+        fecha: { type: string, description: "Valoration creation date" }
 
